@@ -536,6 +536,14 @@
     "type": "V"
   },
   {
+    "date": "2016-09-30",
+    "description": "Grand Final Eve",
+    "locale": "en-AU",
+    "notes": "",
+    "region": "VIC",
+    "type": "V"
+  },
+  {
     "date": "2016-10-03",
     "description": "Labour Day",
     "locale": "en-AU",
