@@ -608,6 +608,14 @@
     "type": "V"
   },
   {
+    "date": "2017-09-29",
+    "description": "Grand Final Eve",
+    "locale": "en-AU",
+    "notes": "",
+    "region": "VIC",
+    "type": "V"
+  },
+  {
     "date": "2017-10-02",
     "description": "Labour Day",
     "locale": "en-AU",
